Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-04-07 Kimmo
 Fix building language files (buildall.bat)
  : buildall.bat

2007-04-04 WinMerge experimental release 2.7.3.3 (SVN revision 4234)

2007-04-04 Kimmo
 Remove expat and SCEW unicode targets from build batch
  : buildall.bat
 BUG: [ 1576168 ] Cannot find file filter path message is wrong
  Src: FileFiltersDlg.cpp
  Src/Languages/*: Merge*.rc
 Bump ShellExtension version to 1.12
  ShellExtension: ShellExtension.rc

2007-04-03 Kimmo
 PATCH: [ 1693113 ] Enable ShellExtension for folder backgrounds
  ShellExtension: WinMergeShell.cpp WinMergeShell.rgs
 BUG: [ 1693441 ] Compare by date (and size) broken in 2.7.3.2
  Src: DiffContext.cpp

2007-04-03 Takashi
 BUG: [ 1693275 ] File extension filter does not work correctly
  Src: FileFilterHelper.cpp

2007-04-02 Kimmo
 RFE: [ 1685190 ] Add 1 pixel margin to line numbers area
  Src/editlib: ccrystaltextview.cpp
 PATCH: [ 1693041 ] Fix couple of editor bugs
  Submitted by Jeremy Dewey
  editlib: ccrystaleditview.cpp ccrystaltextbuffer.cpp

2007-04-01 Tim
 PATCH: [ 1692033 ] Use SetResourceVersions.wsf with 3 version numbers
  Src: SetResourceVersions.wsf
 PATCH: [ 1692097 ] Updated Toolbar Enabled/Disabled BMP
  Submitted by Alexander Skinner
  Src/res: ToolbarDisabled.bmp ToolbarEnabled.bmp

2007-03-31 Takashi
 BUG: [ 1630762 ] Cannot save project file if including non-ascii chars
  Src: Merge.dsp ProjectFile.cpp

2007-03-31 Takashi
 PATCH: [ 1603292 ] Add tab interface for MDI child windows
  Src: MainFrm.cpp MainFrm.h Merge.dsp Merge.rc OptionsDef.h OptionsInit.cpp
   resource.h
  Src/Common: MDITabBar.cpp MDITabBar.h
  Src/Languages/*: Merge*.rc
 Fix broken resources
  Src/Languages/*: Merge*.rc

2007-03-31 Kimmo
 PATCH: [ 1689293 ] Batch file for building WinMerge files
  : buildall.bat

2007-03-30 Kimmo
 PATCH: [ 1690503 ] fix for bug 1659281 "WinMerge forgets monitor to use when th